hphp/hack/test/typecheck/tconst/method_swap_error.php.exp
File "method_swap_error.php", line 17, characters 14-23:
Invalid argument (Typing[4110])
File "method_swap_error.php", line 17, characters 14-23:
Some type constraint(s) here are violated
File "method_swap_error.php", line 4, characters 14-14:
'X::T' is a constrained type
File "method_swap_error.php", line 12, characters 24-30:
This is the expression dependent type <expr#241>::T
  that is compatible with the abstract type constant X::T
  that is compatible with an array key (int/string)
File "method_swap_error.php", line 17, characters 5-7:
  where '<expr#241>' is a reference to this expression
File "method_swap_error.php", line 4, characters 14-14:
  resulting from expanding a type constant as follows:
    <expr#241>::T -> X::T
File "method_swap_error.php", line 4, characters 19-26:
It is incompatible with an array key (int/string)
File "method_swap_error.php", line 8, characters 26-32:
Considering the constraint on '<expr#242>::T'
File "method_swap_error.php", line 17, characters 14-16:
  where '<expr#242>' is a reference to this expression
File "method_swap_error.php", line 4, characters 14-14:
  resulting from expanding a type constant as follows:
    <expr#242>::T -> X::T
